internal/xds/translator/testdata/out/xds-ir/jsonpatch-missing-resource.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        headers:
        - name: user
          stringMatch:
            exact: jason
        prefix: /
      name: first-route
      route:
        cluster: first-route
